# Zen-pos2

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  metadata.json  package-lock.json  plan.md  prod.md  state.md
zen-pos-api/: .env  .env.example  Dockerfile  check_22_orders.py  check_23_summaries.py  check_all_duplicates.py  check_duplicates.py  check_mongo_direct.py  check_users.py  debug_last.py  debug_withdrawals.py  docker-compose.yml  fix_db.py  force_backfill.py  list_22_april.py  list_all.py  list_all_detailed.py  list_all_detailed_v2.py  list_users.py  patch_auth_service.py  pyproject.toml  requirements.txt  scratch_check_db.py  test_agg.py  test_api.py  test_api_logic.py  test_beanie.py  test_users.py  test_withdrawal.py
zen-pos-api/app/: config.py  database.py  dependencies.py  main.py  seeders.py
zen-pos-api/app/core/: exceptions.py  middleware.py  security.py  tasks.py
zen-pos-api/app/models/: attendance.py  customer.py  daily_sales.py  delivery.py  expense.py  ingredient.py  location.py  order.py  otp.py  payroll.py  product.py  register.py  settings.py  token.py  user.py
zen-pos-api/app/routers/: analytics.py  attendance.py  auth.py  customers.py  delivery.py  expenses.py  ingredients.py  inventory.py  locations.py  orders.py  payroll.py  products.py  public.py  register.py  (+4 more)
zen-pos-api/scripts/: seed.py
zen-pos-api/static/: index.html
zen-pos-api/tests/: conftest.py  test_attendance.py  test_auth.py  test_orders.py  test_payroll.py  test_phase2.py  test_products.py  test_public.py  test_roles.py  test_users.py
(+158 files in other folders)
